Erev Shabbos Merge

--- a/code/0_Data_Exploration.ipynb
+++ b/code/0_Data_Exploration.ipynb
@@ -168,7 +168,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = df['last_author_country'].value_counts().reset_index()"
+    "x = df['last_author_country'].value_counts().reset_index()\n",
+    "x = {a:int(b) for a,b in x.to_numpy()[:20,]}"
    ]
   },
   {
@@ -207,13 +208,84 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### EXPLORE MISSING DATA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total_rows = df.shape[0]\n",
+    "x = df.isna().sum(axis=0) / total_rows"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = np.round(x.values,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = x.apply(lambda x: np.round(x,3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x.to_csv(\"./code/txt/slides/missing_data.csv\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Distribution of disambiguated authors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.drop(columns=[\"last_author_country\"],inplace=True)\n",
     "df.rename(columns={'ORG_STATE':'last_author_country'},inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.max(df.groupby('last_author_name')[['PI_IDS']].nunique().values.flatten())"
    ]
   },
   {
@@ -345,15 +417,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### TODO: ADD MISSING INFO FOR ACADEMIX DATASET [ROY]"
+    "### TODO: Number of unique authors - number of unique pmid"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>pmid</th>\n",
+       "      <th>last_author_country</th>\n",
+       "      <th>PI_IDS</th>\n",
+       "      <th>last_author_name</th>\n",
+       "      <th>authors</th>\n",
+       "      <th>doi</th>\n",
+       "      <th>journal_name</th>\n",
+       "      <th>language</th>\n",
+       "      <th>last_author</th>\n",
+       "      <th>last_author_email</th>\n",
+       "      <th>last_author_id</th>\n",
+       "      <th>last_author_inst</th>\n",
+       "      <th>mesh</th>\n",
+       "      <th>mesh_major</th>\n",
+       "      <th>pub_year</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>99144</th>\n",
+       "      <td>25090254</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>1963925</td>\n",
+       "      <td>Simons, RL</td>\n",
+       "      <td>[{'forename': 'Ashley B', 'affiliation': 'Depa...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Journal of family psychology : JFP : journal o...</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>{'affiliation': 'Department of Sociology, Univ...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>University of Georgia</td>\n",
+       "      <td>[Adult, Female, Humans, Interpersonal Relation...</td>\n",
+       "      <td>[African Continental Ancestry Group/psychology...</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>A dyadic analysis of relationships and health:...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>123754</th>\n",
+       "      <td>25696001</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>10066497</td>\n",
+       "      <td>Maus, MV</td>\n",
+       "      <td>[{'forename': 'Laura A', 'affiliation': 'Abram...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Science translational medicine</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>{'affiliation': 'Abramson Cancer Center, Unive...</td>\n",
+       "      <td>[marcela.maus@uphs.upenn.edu]</td>\n",
+       "      <td>1892773.0</td>\n",
+       "      <td>University of Pennsylvania</td>\n",
+       "      <td>[Animals, Disease Models, Animal, Heterografts...</td>\n",
+       "      <td>[Brain Neoplasms/therapy, ErbB Receptors/immun...</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>Rational development and characterization of h...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63288</th>\n",
+       "      <td>25520505</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>1899077</td>\n",
+       "      <td>Katze, MG</td>\n",
+       "      <td>[{'forename': 'Angela L', 'affiliation': 'Depa...</td>\n",
+       "      <td>None</td>\n",
+       "      <td>Journal of virology</td>\n",
+       "      <td>eng</td>\n",
+       "      <td>{'affiliation': 'Department of Microbiology, U...</td>\n",
+       "      <td>[honey@uw.edu]</td>\n",
+       "      <td>1920726.0</td>\n",
+       "      <td>University of Washington</td>\n",
+       "      <td>[Animals, Arenaviridae Infections/immunology, ...</td>\n",
+       "      <td>[Lujo virus/pathogenicity]</td>\n",
+       "      <td>2015.0</td>\n",
+       "      <td>Delayed inflammatory and cell death responses ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            pmid last_author_country    PI_IDS last_author_name  \\\n",
+       "99144   25090254                  GA   1963925       Simons, RL   \n",
+       "123754  25696001                  PA  10066497         Maus, MV   \n",
+       "63288   25520505                  OR   1899077        Katze, MG   \n",
+       "\n",
+       "                                                  authors   doi  \\\n",
+       "99144   [{'forename': 'Ashley B', 'affiliation': 'Depa...  None   \n",
+       "123754  [{'forename': 'Laura A', 'affiliation': 'Abram...  None   \n",
+       "63288   [{'forename': 'Angela L', 'affiliation': 'Depa...  None   \n",
+       "\n",
+       "                                             journal_name language  \\\n",
+       "99144   Journal of family psychology : JFP : journal o...      eng   \n",
+       "123754                     Science translational medicine      eng   \n",
+       "63288                                 Journal of virology      eng   \n",
+       "\n",
+       "                                              last_author  \\\n",
+       "99144   {'affiliation': 'Department of Sociology, Univ...   \n",
+       "123754  {'affiliation': 'Abramson Cancer Center, Unive...   \n",
+       "63288   {'affiliation': 'Department of Microbiology, U...   \n",
+       "\n",
+       "                    last_author_email  last_author_id  \\\n",
+       "99144                            None             NaN   \n",
+       "123754  [marcela.maus@uphs.upenn.edu]       1892773.0   \n",
+       "63288                  [honey@uw.edu]       1920726.0   \n",
+       "\n",
+       "                  last_author_inst  \\\n",
+       "99144        University of Georgia   \n",
+       "123754  University of Pennsylvania   \n",
+       "63288     University of Washington   \n",
+       "\n",
+       "                                                     mesh  \\\n",
+       "99144   [Adult, Female, Humans, Interpersonal Relation...   \n",
+       "123754  [Animals, Disease Models, Animal, Heterografts...   \n",
+       "63288   [Animals, Arenaviridae Infections/immunology, ...   \n",
+       "\n",
+       "                                               mesh_major  pub_year  \\\n",
+       "99144   [African Continental Ancestry Group/psychology...    2014.0   \n",
+       "123754  [Brain Neoplasms/therapy, ErbB Receptors/immun...    2015.0   \n",
+       "63288                          [Lujo virus/pathogenicity]    2015.0   \n",
+       "\n",
+       "                                                    title  \n",
+       "99144   A dyadic analysis of relationships and health:...  \n",
+       "123754  Rational development and characterization of h...  \n",
+       "63288   Delayed inflammatory and cell death responses ...  "
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "iloc_idx = np.random.choice(range(df.shape[0]),3,replace=False)\n",
+    "df.iloc[iloc_idx]"
+   ]
   },
   {
    "cell_type": "markdown",
