--- a/code/3_Logisitic_Regression_Model.ipynb
+++ b/code/3_Logisitic_Regression_Model.ipynb
@@ -3420,7 +3420,7 @@
     "        dict_auth[auth] = {}\n",
     "        dict_auth[auth]['df'] = df[df[\"last_author_name\"] == auth]\n",
     "        dict_auth[auth]['sim_mat'],_ = sim_matrix_3.get_similarity_matrix(ps,dict_auth[auth]['df'],scaler,flag_base = False)\n",
-    "    parameters = para_tuning_3.pipeline(sim_matrix_train,dict_auth,ps) .pipeline_yuvals_code(sim_matrix_train,df,dict_auth,scaler=None,ps=ps)"
+    "    parameters = para_tuning_3.pipeline_yuvals_code(sim_matrix_train,df=df,dict_auth,scaler=None,ps=ps)"
    ]
   },
   {
