Worked on K-means

--- a/code/0_Data_Exploration.ipynb
+++ b/code/0_Data_Exploration.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +80,7 @@
        "'/home/ubuntu/AYP/data/labeled_data/enriched_labeled_dataset_large.json'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3842,11 +3842,39 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Number of papers for Test Set:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "733\n",
+      "2886\n",
+      "6010\n",
+      "6708\n",
+      "7871\n"
+     ]
+    }
+   ],
+   "source": [
+    "use_cases = ['2_da_same','2_da_dif','3_da', '1_da','mix_bag']\n",
+    "\n",
+    "total_papers = 0\n",
+    "\n",
+    "for case in use_cases:\n",
+    "    auths = sim_matrix_3.get_use_case(df,case)\n",
+    "    total_papers += df[df['last_author_name'].isin(auths)].shape[0]\n",
+    "    print(total_papers)"
+   ]
   }
  ],
  "metadata": {
