added word2vec embeddings

--- a/code/4_feature_representation.ipynb
+++ b/code/4_feature_representation.ipynb
@@ -79,18 +79,18 @@
     }
    ],
    "source": [
-    "import os, urllib, glob, sys\n",
-    "from getpass import getpass\n",
+    "# import os, urllib, glob, sys\n",
+    "# from getpass import getpass\n",
     "\n",
-    "user = input('User name: ')\n",
-    "password = getpass('Password: ')\n",
-    "password = urllib.parse.quote(password) # your password is converted into url format\n",
-    "cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
+    "# user = input('User name: ')\n",
+    "# password = getpass('Password: ')\n",
+    "# password = urllib.parse.quote(password) # your password is converted into url format\n",
+    "# cmd_string = \"! git clone https://{0}:{1}@github.com/rgranit/academix-ydata-project AYP\".format(user, password)\n",
     "\n",
-    "os.system(cmd_string)\n",
-    "cmd_string, password = \"\", \"\" # removing the password from the variable\n",
+    "# os.system(cmd_string)\n",
+    "# cmd_string, password = \"\", \"\" # removing the password from the variable\n",
     "\n",
-    "%cd /content/AYP"
+    "# %cd /content/AYP"
    ]
   },
   {
