--- a/code/4_own_meshemb.ipynb
+++ b/code/4_own_meshemb.ipynb
@@ -173,6 +173,85 @@
    "source": [
     "model_dict = {k : model[k] for k in model.wv.index2word}"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### CO-AUTH EMB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.dropna(subset=['authors'],inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 231,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list_of_lists=df.authors.apply(lambda x: [i['name'].lower().split(\",\") for i in x] )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 244,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_names = [[[\"_\".join((b[0],b[-1].strip()[:1]))][0] for b in x] for x in list_of_lists]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_names = Word2Vec(all_names, size=64, window=10, min_count=5, workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_names.save(\"../data/owncoauth2vec.model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/anaconda3/lib/python3.7/site-packages/ipykernel_launcher.py:1: DeprecationWarning: Call to deprecated `__getitem__` (Method will be removed in 4.0.0, use self.wv.__getitem__() instead).\n",
+      "  \"\"\"Entry point for launching an IPython kernel.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model_name_dict = {k : model_names[k] for k in model_names.wv.index2word}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_name_dict"
+   ]
   }
  ],
  "metadata": {
