Added own coauth emb

--- a/code/4_own_meshemb.ipynb
+++ b/code/4_own_meshemb.ipynb
@@ -246,12 +246,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[['tiwari', ' p'], ['rosen', ' m'], ['madabhushi', ' a']]"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list_of_lists[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "model_name_dict"
-   ]
+   "source": []
   }
  ],
  "metadata": {
