Done for July 18

--- a/code/4_own_meshemb.ipynb
+++ b/code/4_own_meshemb.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Word2Vec(df_corpus, size=64, window=10, min_count=4, workers=4)"
+    "model_mesh = Word2Vec(df_corpus, size=64, window=10, min_count=4, workers=4)"
    ]
   },
   {
