--- a/code/5_vae.ipynb
+++ b/code/5_vae.ipynb
@@ -10,7 +10,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -671,6 +676,10 @@
    "cell_type": "code",
    "execution_count": 316,
    "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
     "tags": []
    },
    "outputs": [
