--- a/code/3_Logisitic_Regression_Model_run_yuval.ipynb
+++ b/code/3_Logisitic_Regression_Model_run_yuval.ipynb
@@ -117,23 +117,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/AYP\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd .."
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "tags": []
@@ -142,12 +125,29 @@
     {
      "output_type": "stream",
      "name": "stdout",
-     "text": "READING FROM LOCAL\nFILE PULLED\n"
+     "text": "/Users/roygranit/Desktop/ydata/industry_project/repo/academix-ydata-project\n"
+    }
+   ],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": "READING FROM LOCAL.json\nFILE PULLED\n"
     }
    ],
    "source": [
     "if os.path.exists(PROJECT_ROOT + DATA_PATH + FILE):\n",
-    "    print(\"READING FROM LOCAL\")\n",
+    "    print(\"READING FROM LOCAL.json\")\n",
     "    if FILE.split(\".\")[1] == \"json\":\n",
     "        df = pd.read_json(PROJECT_ROOT + DATA_PATH + FILE)\n",
     "    else:\n",
@@ -175,21 +175,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
-      "text/plain": "   pub_year                                        last_author  \\\n0      2014  {'affiliation': 'Departments of General Medici...   \n1      2016  {'affiliation': 'Department of Immunology, Wei...   \n2      2014  {'affiliation': 'Department of Immunology, Wei...   \n\n                last_author_inst  \\\n0                  Barwon Health   \n1  Weizmann Institute of Science   \n2  Weizmann Institute of Science   \n\n                                        journal_name language      pmid  \\\n0  Clinical medicine insights. Circulatory, respi...      eng  25249765   \n1                        Immunology and cell biology      eng  26606974   \n2                                               Cell      eng  25171404   \n\n                                               title last_author_country  \\\n0  Adherence to therapeutic guidelines for patien...           Australia   \n1  Clonal expansion under the microscope: studyin...              Israel   \n2  Paradoxical signaling by a secreted molecule l...              Israel   \n\n  last_author_name                                            authors  \\\n0      Friedman, N  [{'forename': 'Nr', 'affiliation': 'School of ...   \n1      Friedman, N  [{'forename': 'Michal', 'affiliation': 'Depart...   \n2      Friedman, N  [{'forename': 'Yuval', 'affiliation': 'Departm...   \n\n   last_author_id                                         mesh_major  \\\n0         14025.0                                               None   \n1        806421.0  [Cell Differentiation, Clonal Evolution, Lymph...   \n2        806421.0  [CD4-Positive T-Lymphocytes/cytology, Interleu...   \n\n                                                mesh  \\\n0                                               None   \n1  [Animals, Cell Communication, Cell Tracking/me...   \n2  [Animals, Cell Count, Cell Death, Cell Prolife...   \n\n               last_author_email                         doi     PI_IDS  \n0                           None                        None  145454371  \n1                           None                        None  145618792  \n2  [nir.friedman@weizmann.ac.il]  10.1016/j.cell.2014.07.033  145618792  ",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pub_year</th>\n      <th>last_author</th>\n      <th>last_author_inst</th>\n      <th>journal_name</th>\n      <th>language</th>\n      <th>pmid</th>\n      <th>title</th>\n      <th>last_author_country</th>\n      <th>last_author_name</th>\n      <th>authors</th>\n      <th>last_author_id</th>\n      <th>mesh_major</th>\n      <th>mesh</th>\n      <th>last_author_email</th>\n      <th>doi</th>\n      <th>PI_IDS</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>2014</td>\n      <td>{'affiliation': 'Departments of General Medici...</td>\n      <td>Barwon Health</td>\n      <td>Clinical medicine insights. Circulatory, respi...</td>\n      <td>eng</td>\n      <td>25249765</td>\n      <td>Adherence to therapeutic guidelines for patien...</td>\n      <td>Australia</td>\n      <td>Friedman, N</td>\n      <td>[{'forename': 'Nr', 'affiliation': 'School of ...</td>\n      <td>14025.0</td>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>145454371</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>2016</td>\n      <td>{'affiliation': 'Department of Immunology, Wei...</td>\n      <td>Weizmann Institute of Science</td>\n      <td>Immunology and cell biology</td>\n      <td>eng</td>\n      <td>26606974</td>\n      <td>Clonal expansion under the microscope: studyin...</td>\n      <td>Israel</td>\n      <td>Friedman, N</td>\n      <td>[{'forename': 'Michal', 'affiliation': 'Depart...</td>\n      <td>806421.0</td>\n      <td>[Cell Differentiation, Clonal Evolution, Lymph...</td>\n      <td>[Animals, Cell Communication, Cell Tracking/me...</td>\n      <td>None</td>\n      <td>None</td>\n      <td>145618792</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>2014</td>\n      <td>{'affiliation': 'Department of Immunology, Wei...</td>\n      <td>Weizmann Institute of Science</td>\n      <td>Cell</td>\n      <td>eng</td>\n      <td>25171404</td>\n      <td>Paradoxical signaling by a secreted molecule l...</td>\n      <td>Israel</td>\n      <td>Friedman, N</td>\n      <td>[{'forename': 'Yuval', 'affiliation': 'Departm...</td>\n      <td>806421.0</td>\n      <td>[CD4-Positive T-Lymphocytes/cytology, Interleu...</td>\n      <td>[Animals, Cell Count, Cell Death, Cell Prolife...</td>\n      <td>[nir.friedman@weizmann.ac.il]</td>\n      <td>10.1016/j.cell.2014.07.033</td>\n      <td>145618792</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/plain": "   pub_year                                        last_author  \\\n0      2014  {'affiliation': 'Departments of General Medici...   \n1      2016  {'affiliation': 'Department of Immunology, Wei...   \n2      2014  {'affiliation': 'Department of Immunology, Wei...   \n\n                last_author_inst  \\\n0                  Barwon Health   \n1  Weizmann Institute of Science   \n2  Weizmann Institute of Science   \n\n                                        journal_name language      pmid  \\\n0  Clinical medicine insights. Circulatory, respi...      eng  25249765   \n1                        Immunology and cell biology      eng  26606974   \n2                                               Cell      eng  25171404   \n\n                                               title last_author_country  \\\n0  Adherence to therapeutic guidelines for patien...           Australia   \n1  Clonal expansion under the microscope: studyin...              Israel   \n2  Paradoxical signaling by a secreted molecule l...              Israel   \n\n  last_author_name                                            authors  \\\n0      Friedman, N  [{'forename': 'Nr', 'affiliation': 'School of ...   \n1      Friedman, N  [{'forename': 'Michal', 'affiliation': 'Depart...   \n2      Friedman, N  [{'forename': 'Yuval', 'affiliation': 'Departm...   \n\n   last_author_id                                         mesh_major  \\\n0         14025.0                                               None   \n1        806421.0  [Cell Differentiation, Clonal Evolution, Lymph...   \n2        806421.0  [CD4-Positive T-Lymphocytes/cytology, Interleu...   \n\n                                                mesh  \\\n0                                               None   \n1  [Animals, Cell Communication, Cell Tracking/me...   \n2  [Animals, Cell Count, Cell Death, Cell Prolife...   \n\n               last_author_email                         doi     PI_IDS  \\\n0                           None                        None  145454371   \n1                           None                        None  145618792   \n2  [nir.friedman@weizmann.ac.il]  10.1016/j.cell.2014.07.033  145618792   \n\n     ids_roy  \n0  145454371  \n1  145618792  \n2  145618792  ",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>pub_year</th>\n      <th>last_author</th>\n      <th>last_author_inst</th>\n      <th>journal_name</th>\n      <th>language</th>\n      <th>pmid</th>\n      <th>title</th>\n      <th>last_author_country</th>\n      <th>last_author_name</th>\n      <th>authors</th>\n      <th>last_author_id</th>\n      <th>mesh_major</th>\n      <th>mesh</th>\n      <th>last_author_email</th>\n      <th>doi</th>\n      <th>PI_IDS</th>\n      <th>ids_roy</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <td>0</td>\n      <td>2014</td>\n      <td>{'affiliation': 'Departments of General Medici...</td>\n      <td>Barwon Health</td>\n      <td>Clinical medicine insights. Circulatory, respi...</td>\n      <td>eng</td>\n      <td>25249765</td>\n      <td>Adherence to therapeutic guidelines for patien...</td>\n      <td>Australia</td>\n      <td>Friedman, N</td>\n      <td>[{'forename': 'Nr', 'affiliation': 'School of ...</td>\n      <td>14025.0</td>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>None</td>\n      <td>145454371</td>\n      <td>145454371</td>\n    </tr>\n    <tr>\n      <td>1</td>\n      <td>2016</td>\n      <td>{'affiliation': 'Department of Immunology, Wei...</td>\n      <td>Weizmann Institute of Science</td>\n      <td>Immunology and cell biology</td>\n      <td>eng</td>\n      <td>26606974</td>\n      <td>Clonal expansion under the microscope: studyin...</td>\n      <td>Israel</td>\n      <td>Friedman, N</td>\n      <td>[{'forename': 'Michal', 'affiliation': 'Depart...</td>\n      <td>806421.0</td>\n      <td>[Cell Differentiation, Clonal Evolution, Lymph...</td>\n      <td>[Animals, Cell Communication, Cell Tracking/me...</td>\n      <td>None</td>\n      <td>None</td>\n      <td>145618792</td>\n      <td>145618792</td>\n    </tr>\n    <tr>\n      <td>2</td>\n      <td>2014</td>\n      <td>{'affiliation': 'Department of Immunology, Wei...</td>\n      <td>Weizmann Institute of Science</td>\n      <td>Cell</td>\n      <td>eng</td>\n      <td>25171404</td>\n      <td>Paradoxical signaling by a secreted molecule l...</td>\n      <td>Israel</td>\n      <td>Friedman, N</td>\n      <td>[{'forename': 'Yuval', 'affiliation': 'Departm...</td>\n      <td>806421.0</td>\n      <td>[CD4-Positive T-Lymphocytes/cytology, Interleu...</td>\n      <td>[Animals, Cell Count, Cell Death, Cell Prolife...</td>\n      <td>[nir.friedman@weizmann.ac.il]</td>\n      <td>10.1016/j.cell.2014.07.033</td>\n      <td>145618792</td>\n      <td>145618792</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 12
     }
    ],
    "source": [
-    "friedmans=pd.read_json(\"friedmans_test.json\").rename(columns={\"author_id\":\"PI_IDS\"})\n",
+    "friedmans=pd.read_json(\"code/friedmans_test_2.json\").rename(columns={\"author_id\":\"PI_IDS\"})\n",
     "friedmans.head(3)"
    ]
   },
@@ -1178,9 +1178,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.6.8 64-bit ('nlp': conda)",
    "language": "python",
-   "name": "python3"
+   "name": "python36864bitnlpcondaedb4459334ba4ee28e4936a12647cfbd"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1192,7 +1192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.6.8-final"
   }
  },
  "nbformat": 4,
